fix: removed trash
